--- a/my_project/my_portfolio/css/footer.css
+++ b/my_project/my_portfolio/css/footer.css
@@ -37,7 +37,7 @@
   display: flex;
 }
 .footer .img-box .sm-img-box:nth-child(1) {
-  transform: translateY(-20%);
+  transform: translateY(20%);
 }
 .footer .img-box .sm-img-box:nth-child(3) {
   transform: translateY(20%);
@@ -57,11 +57,6 @@
   height: 24vh;
 }
 .footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(2) {
-  background-image: url(../img/footerImg/median.png);
-  width: 20vw;
-  height: 24vh;
-}
-.footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(3) {
   background-image: url(../img/footerImg/exampl.png);
   width: 20vw;
   height: 24vh;
@@ -109,4 +104,50 @@
   align-items: center;
   font-family: "Giants-Bold";
   font-size: 1vw;
+}
+
+@media (max-width: 768px) {
+  .footer .footer-inner {
+    width: 80vw;
+    height: 80vh;
+    top: 5vh;
+    left: 10vw;
+  }
+
+  .footer .img-box {
+    width: 80vw;
+    height: 40vh;
+    top: 10vh;
+    left: -5vw;
+  }
+  .footer .img-box .sm-img-box:nth-child(1) {
+    transform: translateY(-4vh);
+  }
+  .footer .img-box .sm-img-box:nth-child(3) {
+    transform: translateY(4vh);
+  }
+
+  .footer .img-box .sm-img-box .item-box {
+    width: 20vw;
+    height: 7vh;
+    margin: 2vw 2vw;
+    box-shadow: 0.1vw 0.1vw 0.2vw #333333;
+  }
+  .footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(1) {
+    width: 28vw;
+    height: 8vh;
+  }
+  .footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(2) {
+    width: 28vw;
+    height: 8vh;
+  }
+
+  .footer .text-box {
+    right: 0;
+    top: 60%;
+  }
+  .footer .text-box p {
+    font-size: 1vw;
+    margin-bottom: 5vh;
+  }
 }
