--- a/my_project/my_portfolio/css/mindSetBack.css
+++ b/my_project/my_portfolio/css/mindSetBack.css
@@ -1,10 +1,5 @@
+/* mind set background */
 .mind .backwrap {
-  /* background: rgb(147, 127, 148);
-  background: linear-gradient(
-    345deg,
-    rgba(147, 127, 148, 1) 0%,
-    rgba(129, 22, 142, 1) 79%
-  ); */
   background: rgb(99, 32, 128);
   background: linear-gradient(
     163deg,
@@ -20,21 +15,18 @@
   z-index: 1;
 }
 
-/* Shapes & Animation
-  */
+/* mind set moving elements (background animation) */
 .mind .back-shapes {
   width: 100%;
   height: 100%;
   position: relative;
   overflow: hidden;
 }
-
 .mind .back-shapes img {
   opacity: 0.2;
   position: absolute;
   width: 1.5%;
 }
-
 .mind .floating {
   position: absolute;
   animation-name: floating;
@@ -86,6 +78,7 @@
   opacity: 0.2;
 }
 
+/* floating animation */
 @keyframes floating {
   0% {
     transform: translateY(0%) rotate(-55deg);
