--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -3,13 +3,7 @@
   src: url(../../font/Roboto/Roboto-Bold.ttf);
 }
 
-.scrollspy-example {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow-y: scroll;
-}
-
+/* side navigation, bootstrap scrollspy */
 #navbar-scrollspy {
   position: fixed;
   right: 0%;
@@ -17,7 +11,6 @@
   transform: translateY(-50%);
   z-index: 10000;
 }
-
 #navbar-scrollspy ul {
   display: flex;
   flex-direction: column;
